--- a/ClubDomain.Classes/ClubDomain.Classes.csproj
+++ b/ClubDomain.Classes/ClubDomain.Classes.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=7.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.7.1.1\lib\net45\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -51,7 +54,8 @@
     <Compile Include="ClubModels\Club.cs" />
     <Compile Include="ClubModels\ClubEvent.cs" />
     <Compile Include="ClubModels\EventAttendnace.cs" />
-    <Compile Include="ClubModels\Members.cs" />
+    <Compile Include="ClubModels\Member.cs" />
+    <Compile Include="ClubModels\Programme.cs" />
     <Compile Include="Migrations\201810092202236_Initial Club Context.cs" />
     <Compile Include="Migrations\201810092202236_Initial Club Context.Designer.cs">
       <DependentUpon>201810092202236_Initial Club Context.cs</DependentUpon>
