--- a/Week4.Console/Week4.Console.csproj
+++ b/Week4.Console/Week4.Console.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Programme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,6 +66,12 @@
     <EmbeddedResource Include="StudentList1.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClubDomain.Classes\ClubDomain.Classes.csproj">
+      <Project>{c0b3e1a5-a57b-45fc-9444-beffea275978}</Project>
+      <Name>ClubDomain.Classes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
