Week 4 Lab finished

--- a/MVCClubsWeek4/Web.config
+++ b/MVCClubsWeek4/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVCClubsWeek4-20181010120049.mdf;Initial Catalog=aspnet-MVCClubsWeek4-20181010120049;Integrated Security=True"      providerName="System.Data.SqlClient" />-->
-    <add name="ClubsConnection" connectionString="          Data Source=(LocalDb)\MSSQLLocalDB;          Initial Catalog=Week4Lab-Clubs-ppowell;          Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClubsConnection" connectionString="
+         Data Source=(LocalDb)\MSSQLLocalDB;
+         Initial Catalog=Week4Lab-Clubs-ppowell;
+         Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
