--- a/MVCClubsWeek4/Views/Web.config
+++ b/MVCClubsWeek4/Views/Web.config
@@ -34,6 +34,8 @@
   </system.webServer>
 
   <system.web>
+    <!--<globalization culture="en-IE" uiCulture="en-IE" />-->
+    <globalization culture="auto" uiCulture="auto" />
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
